AC_PREREQ(2.50) dnl require version 2.5+ of autoconf

AC_INIT([Rcpp], 1.0) dnl package name, version

dnl the CC and CFLAGS variables control configure tests, and they need to
dnl be the same as what will be used when the package is built. There is
dnl no need to place these flags in Makevars, and if no configure tests are
dnl done they are not needed here (see "Writing R Extensions" manual).
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
    echo "Could not determine R home directory"
    exit 1
fi
CC=`"${R_HOME}/bin/R" CMD config CC`
CFLAGS=`"${R_HOME}/bin/R" CMD config CFLAGS`

AC_LANG(C++) dnl using C++

AC_REQUIRE_CPP

dnl include sample settings to use "MyLib"
AC_SUBST([CPPFLAGS],["${CPPFLAGS} -I../inst/lib"])
AC_SUBST([LDFLAGS],["${LDFLAGS} -L../inst/lib -lMyLib"])
echo "Building MyLib in inst/lib..."
cd inst/lib
make
cd ../..
echo "Copying source files to inst/doc..."
cp src/*.cpp src/*.hpp inst/doc
cp inst/lib/*.cpp inst/lib/*.hpp inst/doc
cp R/RcppExample.R inst/doc


AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_OUTPUT(src/Makevars)
