# Require version 2.5+ of autoconf
AC_PREREQ(2.50)

# PACKAGE_NAME and PACKAGE_VERSION
AC_INIT([RcppTemplate], 6.0)

# Generate config.hpp for system header file detection.
AC_CONFIG_HEADERS([src/config.hpp])

# Check for uname header file.
AC_CHECK_HEADERS([sys/utsname.h])

# Get basic R flags
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
    echo "Could not determine R home directory"
    exit 1
fi
CPP=`"${R_HOME}/bin/R" CMD config CXX`
CPPFLAGS=`"${R_HOME}/bin/R" CMD config CXXFLAGS`

# Enable C++ support
AC_LANG(C++)
AC_REQUIRE_CPP

# If your package depends on external libs add lines
# like this to check for them...
AC_SUBST([CPPFLAGS],["${CPPFLAGS} -I../RcppSrc"])
AC_SUBST([LDFLAGS],["${LDFLAGS} -L../RcppSrc -lRcpp"])

# Substitute symbolic variables in src/Makevars.in to
# generate src/Makevars
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_OUTPUT(src/Makevars)
