# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.50)

AC_INIT

: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
    echo "Could not determine R home directory"
    exit 1
fi
CXX=`"${R_HOME}/bin/R" CMD config CXX`
CXXFLAGS=`"${R_HOME}/bin/R" CMD config CXXFLAGS`

AC_LANG(C++)

# Initialize substitution variables (these will replace the
# symbolic values in Makevars.in).
CPPFLAGS=$CXXFLAGS
LDFLAGS=

# Detect FFTW headers and library.

# Permit user to specify location of FFTW include files.
AC_ARG_WITH([fftw-include],
	[AC_HELP_STRING([--with-fftw-include=FFTW_INCLUDE],
                        [specify location of fftw.h])],
	[FFTW_INCLUDE="${withval}/"],
	[FFTW_INCLUDE=""])

# If user specified location, try to find header there, otherwise,
# search standard places.
AC_CHECK_HEADERS([${FFTW_INCLUDE}fftw3.h], [HAVE_FFTW_H=TRUE],
                 [AC_MSG_ERROR([Sorry, can't find fftw header])])

# Permit user to specify location of FFTW libs.
AC_ARG_WITH([fftw-lib],
	[AC_HELP_STRING([--with-fftw-lib=FFTW_INCLUDE],
                        [specify location of libfftw])],
	FFTW_LIBS="-L${withval} -lfftw3",
	FFTW_LIBS="-lfftw3")

# Update substitution variables.
if test ! $FFTW_INCLUDE = ""; then
   CPPFLAGS="$CPPFLAGS -I${FFTW_INCLUDE}"
fi

if test ! $FFTW_LIBS = ""; then
   LDFLAGS="$LDFLAGS $FFTW_LIBS"
fi
# End of FFTW detection section

# Make the substitutions in the specified files (Makevars.in -> Makevars)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_CONFIG_FILES([src/Makevars])
AC_OUTPUT

